{
    "name": "InputActions",
    "maps": [
        {
            "name": "Default",
            "id": "00d4abb2-e032-4797-ae49-2aeb04f60fae",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d1994534-9a3e-42a6-b84b-8f29c5157d51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "e6e66b25-93fe-4304-9dfc-2cb5fdca20b7",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightMouseHold",
                    "type": "Value",
                    "id": "ecbf36f2-aa3e-4b42-965c-d3c63536b3c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "105f95b7-22f8-4952-9ffc-c9012b6b4194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "014c6dc1-8248-4aaa-a2fe-79ba0d99392b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSkill",
                    "type": "Button",
                    "id": "b547c456-7319-46c9-964a-fc0bea20e758",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "67352479-1387-4b9a-a7b1-6ed23e3a673f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotationLock",
                    "type": "Button",
                    "id": "17ffab29-b0d5-4aba-b6bc-5e348b1267e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextMusic",
                    "type": "Button",
                    "id": "67e80094-3cb7-46ab-8a16-198768e80f56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookWhenRotationLocked",
                    "type": "Value",
                    "id": "f7ef9aaf-8315-4f0f-9245-293ce550b41a",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "dae9529d-0497-4501-a444-5e251f16ffda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "3b88eda2-38bc-4c74-ad5c-e1d934097119",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "024b37fd-f04b-490b-9fbc-44ace3544d51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "86b5594e-a716-48b1-a02e-55546ca8dbcd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9cbc3118-a15b-472e-b171-fd2247f6bbfb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9dda1ba3-d2c1-486b-b728-7c5e1fb320b0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4deb59c5-b10a-4df0-94e9-baa11bc87f6b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d34887ca-8c64-485a-a393-eca1dff20f23",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "318dd207-bd00-450c-a38c-ebca0cca583e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "a45a93eb-21dd-4c90-906b-bf11d8bdfdb1",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "60839b9a-61d3-46b0-97a5-cb3d75ab885d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "887e2d12-989d-406c-a05a-daa99cf13aa9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "babc5c18-9e86-41d9-986a-893b083710eb",
                    "path": "<VirtualMouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7084bd44-e12a-4b6d-b107-b8f60353405e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fac6c9ec-37ba-4b0d-868d-cff70d64e0f1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LeftClickWhileRightPressed",
                    "id": "babf1de9-aba7-4b8f-b70a-e143e958dbaf",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "e6af4f1f-cdef-4bd8-bc41-1a02b9d8d536",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "fdcadf48-8e85-4c00-a88a-b500fe5958e4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a96ac94-4891-4c37-ba67-9c7353271899",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "857f6f22-16c8-4e65-b6fa-7e8f726951ca",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c3f2a4-5cb2-4337-95a6-979c41e5b62e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "UseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eeb1cfa5-1399-4bb1-b61a-a1f3ecaf0ece",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4d8a758-7915-43e5-8f20-39567d50954d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a10a3d4a-cb03-4576-8d12-318ae4667ed7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookWhenRotationLocked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3675d0fd-5681-4e3a-8995-f7a650514dc2",
                    "path": "<VirtualMouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookWhenRotationLocked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "714e710b-f51c-4cd7-9aa5-2e6af23c3551",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7681818f-1d59-4500-82b6-26763045b76b",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45bb06e9-a68c-4df8-b4cb-b1edff7a9105",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "386900d7-2504-461a-89b6-2712ea5119fc",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}